# devcontainer-features

./: .env.example  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  cosmic-ray-ci.toml  cosmic-ray.toml  merge-odoo-sdk.sh  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements.dev.txt  setup.ps1  setup.sh  test-merge.sh  timelog.py
libraries/odoo_sdk/: Makefile  cosmic-ray-ci.toml  cosmic-ray.toml  pyproject.toml  task_tracker_system_prompt.md
libraries/odoo_sdk/docs/source/: conf.py  index.md  quickstart_mcp.md  quickstart_tui.md  resync_google.md  walkthrough.ipynb
libraries/odoo_sdk/docs/source/design/: index.md  odoo-sdk-architecture-plan.md  odoo-sdk-design-patterns.md
libraries/odoo_sdk/examples/commands/: get_todo_command.py  get_uid_command.py
libraries/odoo_sdk/examples/general/: environment_alterations.py  recordset_set_ops.py  scratch_task_todo_smoke_test.py  search_partners_command.py
libraries/odoo_sdk/src/odoo_sdk/: __init__.py  _utils.py  prune.py  reap.py
libraries/odoo_sdk/src/odoo_sdk/adapters/: __init__.py  external_sync.py  state_persistence.py
libraries/odoo_sdk/src/odoo_sdk/billing/: __init__.py  timesheet.py  timesheet_reports.py  unlogged_time.py  upload.py
libraries/odoo_sdk/src/odoo_sdk/cli/: __init__.py  __main__.py
libraries/odoo_sdk/src/odoo_sdk/client/: client.py
libraries/odoo_sdk/src/odoo_sdk/commands/: command.py  command_registry.py  log_event.py
libraries/odoo_sdk/src/odoo_sdk/config/: settings.py
libraries/odoo_sdk/src/odoo_sdk/env/: __init__.py  metadata_cache.py
libraries/odoo_sdk/src/odoo_sdk/fields/: __init__.py  commands.py
libraries/odoo_sdk/src/odoo_sdk/mcp/: __main__.py  server.py
libraries/odoo_sdk/src/odoo_sdk/query/: __init__.py  domain.py
libraries/odoo_sdk/src/odoo_sdk/records/: recordset.py
libraries/odoo_sdk/src/odoo_sdk/sessionization/: __init__.py  config.py  formatting.py  incremental.py  models.py  render_csv.py  render_markdown.py  scoring.py  strategies.py  transform.py  windows.py
libraries/odoo_sdk/src/odoo_sdk/state/: __init__.py  config.py  db.py  discovery.py  models.py
libraries/odoo_sdk/src/odoo_sdk/task_tracker/: __init__.py  odoo_ops.py
libraries/odoo_sdk/src/odoo_sdk/transport/: __init__.py  _fault_mapping.py  errors.py  executor.py  json2.py  rpc.py
libraries/odoo_sdk/src/odoo_sdk/tui/: __init__.py  __main__.py  app.py  box.py  canvas.py  color.py  evidence.py  export.py  frame.py  meter.py  review.py  timeline.py  triage.py  window.py
libraries/odoo_sdk/src/odoo_sdk/utilities/: __init__.py  attachments.py  checkpoint.py  html.py  knowledge.py  mail_status.py  odoo_helpers.py  prompt_messages.py  reap.py  runs.py  stats.py  timesheet.py  timesheets.py  unlogged_time.py  upload.py
libraries/odoo_sdk/tests/: support.py  test_prune.py  test_public_exports.py  test_reap.py
libraries/odoo_sdk/tests/test_adapters/: test_external_sync.py  test_google_sync.py  test_source_mapping.py  test_state_persistence.py
libraries/odoo_sdk/tests/test_billing/: test_abort_billing_exclusion.py  test_billing.py  test_timesheet.py  test_timesheet_reports.py  test_upload.py
libraries/odoo_sdk/tests/test_cli/: test_cli_main.py  test_discover.py  test_hook_cli_contract.py  test_log_event.py  test_prune.py  test_reap.py  test_resync.py  test_upload.py
libraries/odoo_sdk/tests/test_client/: test_odoo_client.py  test_unlink_forbidden.py
libraries/odoo_sdk/tests/test_command_registry/: test_command_protocol.py  test_command_registry.py  test_rpc_protocol.py
libraries/odoo_sdk/tests/test_commands/: test_log_event.py
libraries/odoo_sdk/tests/test_commands/test_builtin/: test_abort_run.py  test_abort_task.py  test_assign_event.py  test_builtin_commands.py  test_chatter_keyword_regression.py  test_resync.py  (+14 more)
libraries/odoo_sdk/tests/test_fields/: test_command_alias.py  test_field_adapters.py  test_x2many_commands.py
libraries/odoo_sdk/tests/test_mcp/: test_ctx_schema.py  test_main.py  test_prompts.py  test_server.py  test_server_async.py  test_server_error_boundary.py  test_server_events.py  test_server_profiling.py  test_server_toon.py  test_start_task_branch_setup.py  test_start_task_remote_base.py  test_start_task_stash_regression.py  test_tools.py
libraries/odoo_sdk/tests/test_query/: test_domain_eval.py  test_domain_expression.py
libraries/odoo_sdk/tests/test_records/: test_odoo_recordset.py
libraries/odoo_sdk/tests/test_sessionization/: _helpers.py  test_config.py  test_formatting.py  test_incremental.py  test_models.py  test_parity.py  test_render_csv.py  test_render_markdown.py  test_scoring.py  test_strategies.py  test_transform.py  test_windows.py
libraries/odoo_sdk/tests/test_state/: test_central_db_acceptance.py  test_concurrent_writers.py  test_config.py  test_config_google.py  test_db.py  test_default_root.py  test_derived_sessions.py  test_discovery.py  test_external_id.py  test_init_script_parity.py  test_profiling_settings.py  test_sessionization_store.py  test_strict_schema.py  test_triage_events.py  test_window_boundaries.py
libraries/odoo_sdk/tests/test_task_tracker/: test_odoo_ops.py  test_state.py
libraries/odoo_sdk/tests/test_tools/: test_mutation_gate.py
libraries/odoo_sdk/tests/test_transport/: test_error_mapping.py  test_fault_mapping.py  test_odoo_json2_executor.py  test_odoo_rpc_executor.py
libraries/odoo_sdk/tests/test_tui/: _fake.py  test_app.py  test_box.py  test_canvas.py  test_color.py  test_evidence.py  test_export.py  test_frame.py  test_main.py  test_meter.py  test_pyte_drive.py  test_review.py  test_stats.py  test_timeline.py  test_triage.py  test_window.py
libraries/odoo_sdk/tests/test_utilities/: test_abort_billing_exclusion.py  test_attachments.py  test_billing.py  test_checkpoint.py  test_env.py  test_html.py  test_logged_lines.py  test_odoo_helpers.py  test_prune.py  test_reap.py  test_runs.py  test_task_aging.py  test_timesheet.py  test_timesheets.py  test_upload.py
libraries/odoo_sdk/tools/: coverage.py  mutation.py  mutation_gate.py  report.py
(+513 files in other folders)
